hphp/hack/test/typecheck/reactive/rx_if_implements11.php.exp
File "rx_if_implements11.php", line 7, characters 3-48:
Only one of following annotations is allowed: __Pure, __Rx, __RxShallow, __RxLocal, __NonRx. (Parsing[1002])
